--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "file-saver": "^1.3.3",
     "fs": "^0.0.2",
     "glob": "^7.1.1",
-    "gulp": "^4.0.0-alpha.2",
+    "gulp": "^4.0.0-build.a271520",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-base64": "^0.1.3",
     "gulp-buster": "^1.1.0",
@@ -80,7 +80,9 @@
     "xmljson": "^0.2.0",
     "yametrika": "^1.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-4.0.build": "^4.0.0-build.a271520"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
