--- a/package.json
+++ b/package.json
@@ -35,39 +35,40 @@
     "gulp-notify": "^2.2.0",
     "gulp-px2rem": "^1.0.9",
     "gulp-px2vw": "^1.0.9",
-    "gulp-rename": "^1.2.2",
     "gulp-remember": "^0.3.1",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-riot": "^0.5.9",
     "gulp-sass": "^2.3.2",
-    "gulp-sass-glob": "^1.0.8",
     "gulp-sass-bulk-import": "^1.0.1",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sass-inheritance": "^0.5.1",
     "gulp-sass-partials-imported": "^1.0.5",
     "gulp-scss": "^1.4.0",
     "gulp-uglify": "^2.0.0",
     "hbs": "^4.0.1",
-    "http": "^0.0.0",
     "html-pdf": "^2.1.0",
+    "http": "^0.0.0",
     "https": "^1.0.0",
     "iconv-lite": "^0.4.13",
     "method-override": "^2.3.6",
     "mime": "^1.3.4",
     "mobile-detect": "^1.3.3",
-    "mongodb": "^2.1.18",
     "moment": "^2.15.1",
+    "mongodb": "^2.1.18",
     "mongoose": "^4.4.16",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nconf": "^0.8.4",
+    "nodemailer": "^4.0.0",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7",
     "passport-vkontakte": "^0.3.2",
-    "phantomjs-prebuilt": "^2.1.13",
+    "path": "^0.12.7",
     "permessage-deflate": "^0.1.5",
+    "phantomjs-prebuilt": "^2.1.13",
     "pm2": "^2.0.18",
     "request": "^2.74.0",
     "serve-favicon": "^2.3.0",
